# CxnstrctAI

./: .replit  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  replit.md
.agents/: agent_assets_metadata.toml
.github/workflows/: ci.yml
artifacts/api-server/: build.mjs  package.json  tsconfig.json
artifacts/api-server/src/: app.ts  index.ts
artifacts/api-server/src/lib/: cost-tracker.ts  embedder.ts  integrity.ts  require-auth.ts
artifacts/api-server/src/middlewares/: authMiddleware.ts
artifacts/api-server/src/routes/: admin.ts  auth.ts  costs.ts  health.ts  index.ts
artifacts/ocr-extractor/: index.html  package.json  requirements.yaml  tsconfig.json  vite.config.ts
artifacts/ocr-extractor/.replit-artifact/: artifact.toml
artifacts/ocr-extractor/src/: App.tsx  index.css
artifacts/ocr-extractor/src/components/: confidence-badge.tsx  layout.tsx
artifacts/ocr-extractor/src/hooks/: use-upload.ts
artifacts/ocr-extractor/src/pages/: admin.tsx  costs.tsx  extract.tsx  extraction-details.tsx  financial-extract.tsx  history.tsx  not-found.tsx  pdf-extract.tsx  project-detail.tsx  projects.tsx  (+4 more)
attached_assets/: Pasted-Add-a-construction-PDF-ingestion-pipeline-with-the-foll_1774200029331.txt
lib/api-spec/: openapi.yaml
lib/api-zod/: tsconfig.json
lib/api-zod/src/: index.ts
lib/integrations-openai-ai-server/: tsconfig.json
scripts/: apply_page_supplement.mjs  backfill_pe_stamps.py  detect_document.py  financial_processor.py  generate_whitepaper.py  pdf_processor.py  reextract_page.py  spec_processor.py
scripts/ci/: validate.sh
(+20 files in other folders)
