[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
    "numpy>=2.4.3",
    "openai>=2.29.0",
    "opencv-python-headless>=4.13.0.92",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.9",
    "pillow>=12.1.1",
    "pytesseract>=0.3.13",
]
